--- a/o3po/public/css/o3po-onepress-extra.css
+++ b/o3po/public/css/o3po-onepress-extra.css
@@ -75,3 +75,6 @@ div.important-box {
     padding: 20px;
     border: 2px solid #53257f;
 }
+.onepress-menu.onepress-menu-mobile li {
+    border: 1px solid #e9e9e9;
+}
