renamed several functions of O3PO_Settings introduced new O3PO_Form trait

--- a/o3po/admin/css/o3po-admin.css
+++ b/o3po/admin/css/o3po-admin.css
@@ -11,6 +11,6 @@
 #metadata_metabox textarea.required:invalid{
     border-color: red;
 }
-.o3po-setting {
+.o3po-settings {
     min-width: 80%;
 }
