fix text color not being black when printing from some browsers, resolves #175

--- a/o3po/public/css/o3po-public.css
+++ b/o3po/public/css/o3po-public.css
@@ -104,6 +104,11 @@ form.search-form input.search-submit {
     {
         display: none !important;
     }
+
+    html
+    {
+	color: black !important
+    }
 }
 div.publication-action-buttons button {
     display: inline-block;
